<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="display"
        android:title="@string/display_category">

        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <Preference
            android:key="device_kcal"
            android:persistent="false"
            android:icon="@drawable/ic_kcal"
            android:title="@string/device_kcal_title"
            android:summary="@string/device_kcal_summary" >
            <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="com.xiaomi.parts.kcal.KCalSettingsActivity"
                android:targetPackage="com.xiaomi.parts.kcal"/>
        </Preference>

        <PreferenceScreen
            android:key="ambient_display_gestures"
            android:fragment="com.xiaomi.parts.ambient.AmbientGesturePreferenceActivity"
            android:summary="@string/ambient_display_gestures_summary"
            android:icon="@drawable/ic_doze"
            android:title="@string/ambient_display_gestures_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other_category" >
        <com.xiaomi.parts.preferences.SecureSettingSwitchPreference
            android:key="fastcharge"
            android:defaultValue="false"
            android:title="@string/fastcharge_title"
            android:icon="@drawable/ic_fastcharge"
            android:summary="@string/fastcharge_summary" />
    </PreferenceCategory>

    <PreferenceCategory
    android:key="selinux"
    android:title="@string/selinux_category">

    <Preference
        android:summary="@string/selinux_explanation_summary"
        android:selectable="false"/>

    <SwitchPreference
        android:key="selinux_mode"
        android:title="@string/selinux_mode_title"
        android:summaryOn="@string/selinux_enforcing_summary"
        android:summaryOff="@string/selinux_permissive_summary"
        android:icon="@drawable/ic_linux" />

    <SwitchPreference
        android:key="selinux_persistence"
        android:title="@string/selinux_persistence_title"
        android:summary="@string/selinux_persistence_summary"
        android:defaultValue="true"
        android:icon="@drawable/ic_power" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="vibration"
        android:title="@string/vibration_category">
        <com.xiaomi.parts.preferences.VibrationSeekBarPreference
            android:defaultValue="80"
            android:key="vibration_strength"
            android:max="100"
            android:title="@string/vibration_strength_title"
            android:icon="@drawable/ic_vibrate"
            app:min="1"
            app:units="%"/>
    </PreferenceCategory>
</PreferenceScreen>
